# SHAW

./: CMakeLists.txt  LICENSE  README.md  do_build.sh  input_template.yaml  m.math.cache  pelicanconf.py
bash/: build_kokkos_and_kernels.sh  build_openblas.sh  cmake_generators_for_pressio-builder.sh  cmd_line_options.sh  global_vars.sh
bash_scripts/: build_kokkos_and_kernels.sh  build_tpls.sh  do_build.sh  global_vars.sh
content/: index.rst
cpp/: CMakeLists.txt
docker_scripts/: ubuntu-20.04-kokkos_3.5.00-kokkoskernels_3.5.00-yamlcpp_0.7.0-openmp-clang.dockerfile  ubuntu-20.04-kokkos_3.5.00-kokkoskernels_3.5.00-yamlcpp_0.7.0-openmp.dockerfile
docs/: .buildinfo  Makefile  about-the-project.html  archives.html  blas_lapack.html  build.md  build_expert.html  build_stepbystep.html  demo1.html  demo2.html  demo3.html  demo_rank1fom.html  demo_rank1fommulti.html  demo_rank2fom.html  demos.html  genindex.html  goveq.html  governing-equations-and-discretization.html  host-openmp-kokkos-build.html  host-serial-kokkod-build.html  index.html  input-file.html  inputfile.html  inputfile_description.html  inputfile_template.html  kokkos_host_omp.html  kokkos_host_serial.html  kokkos_omp_cuda.html  license.html  m.math.cache  material-models.html  materialmodels.html  multi-forcing-run-with-rank-1.html  multi-forcing-run-with-rank-2.html  multi-forcing-run.html  objects.inv  pelicanconf.py  performance.html  run.md  run_fom.md  (+5 more)
helper_scripts/: license-template
material_models/: AK135F_fnrizzi.xlsx  ak135f.txt  prem.txt
meshing/: create_single_mesh.py  fullMeshWithThreeVarGroups.py  grid_schematic.py  sampleMeshWithTwoVarGroups.py
output/: governing-equations-and-discretization.html  index.html  license.html  material-models.html  various.html
python_scripts/: compute_state_error.py  constants.py  create_run_directory.py  cumulative_energy.py  interpolate_state_target_step.py  regexes.py  utils.py  wf_fom_scaling.py  wf_rom_accuracy.py  wf_rom_scaling.py  wf_rom_uq_forcing_period.py  wf_scaling.py
python_scripts_revise/: log_file_extractor.py  plot_fom_scaling.py  utils.py  wf_fom_scaling.py
src/cpp/: CMakeLists.txt
src/cpp/src/benchmark/: gemm.cc  main_eig_perf.cc  main_spmv.cc
src/cpp/src/kokkos/: common_types.hpp  main_fom.cc  main_rom.cc
src/cpp/src/kokkos/fom/: fom_complexities.hpp  fom_problem_rank_one_forcing.hpp  fom_problem_rank_two_forcing.hpp  run_fom.hpp
src/cpp/src/kokkos/rom/: rom_problem_base.hpp
src/cpp/src/shared/: map_nominal_location_to_velocity_grid_point.hpp
src/cpp/src/shared/checkers/: check_cfl.hpp
src/cpp/src/shared/complexities/: scal.hpp
src/cpp/src/shared/enums/: supported_samplable_params_enums.hpp
src/cpp/src/shared/forcing_helpers/: rank_one_forcing.hpp  signal.hpp
src/cpp/src/shared/material_models/: material_model_base.hpp  material_model_unilayer.hpp
src/cpp/src/shared/meta/: meta_eigen.hpp  meta_kokkos.hpp
src/cpp/src/shared/parser/: parser_mixin_forcing_section.hpp  parser_mixin_io_section.hpp  parser_mixin_material_model.hpp  parser_mixin_rom_section.hpp
src/cpp/src/tools/: main_reconstruct_fom_state.cc
src/cpp/src/tools/to_revise/: matrix_io.cc
src/cpp/tests/: CMakeLists.txt
src/cpp/tests/fomNearCmb/: input1.yaml  input2.yaml
src/cpp/tests/fomNearEarthSurface/: input1.yaml  input2.yaml
src/cpp/tests/fomSymmetryAxisThetaPi/: input1.yaml
src/cpp/tests/fomSymmetryAxisThetaZero/: input1.yaml
src/cpp/tests/torevive/fomMultiForcing/: CMakeLists.txt
src/cpp/tests/torevive/romTest2/: final_generalized_coords_gold.txt
tests/: CMakeLists.txt  compare.py  testwrapper_fom.cmake
tests/coords/: CMakeLists.txt  input.yaml  main.cc
tests/fomInnerDomain/: CMakeLists.txt  input.yaml  input2.yaml  snaps_vp_0_gold
tests/fomNearCmb/: CMakeLists.txt  input1.yaml
tests/fomNearEarthSurface/: CMakeLists.txt  input1.yaml
tests/fomSymmetryAxisThetaPi/: CMakeLists.txt  input2.yaml
tests/fomSymmetryAxisThetaZero/: CMakeLists.txt  input2.yaml  test.cmake
tests/forcing_rank1/: CMakeLists.txt  input.yaml  main.cc
tests/graphs/: CMakeLists.txt  input.yaml  main.cc
tests/jacobian_sp/: CMakeLists.txt  main.cc
tests/jacobian_vp/: CMakeLists.txt  main.cc
tests/meshInfo/: CMakeLists.txt  input.yaml  main.cc
tests/multiDepthsAndPeriodsForcingRank1/: CMakeLists.txt  input.yaml  seismogram_0_gold  seismogram_1_gold  seismogram_2_gold  seismogram_3_gold  seismogram_4_gold  seismogram_5_gold  seismogram_6_gold  seismogram_7_gold  seismogram_8_gold  snaps_sp_0_gold  snaps_sp_1_gold  snaps_sp_4_gold  snaps_sp_6_gold  snaps_sp_8_gold  snaps_sp_gold_2  snaps_sp_gold_3  snaps_sp_gold_7  snaps_vp_0_gold  snaps_vp_4_gold  snaps_vp_7_gold  snaps_vp_gold_1  snaps_vp_gold_2  snaps_vp_gold_3  snaps_vp_gold_6  snaps_vp_gold_8  test.cmake
tests/multiDepthsAndPeriodsForcingRank2/: CMakeLists.txt  input.yaml  seismogram_0_gold  seismogram_1_gold  seismogram_2_gold  snaps_sp_0_gold  snaps_sp_2_gold  snaps_vp_0_gold  snaps_vp_1_gold  snaps_vp_2_gold  test.cmake
tests/multiDepthsForcingRank1/: CMakeLists.txt  input.yaml  seismogram_2_gold  seismogram_gold_0.txt  seismogram_gold_1.txt  snaps_sp_2_gold  snaps_sp_gold_0.txt  snaps_vp_0_gold  snaps_vp_2_gold  snaps_vp_gold_0.txt  test.cmake
tests/multiDepthsForcingRank2/: CMakeLists.txt  input.yaml  seismogram_gold_1.txt  snaps_sp_gold_0.txt  snaps_vp_0_gold  test.cmake
tests/multiPeriodsForcingRank1/: CMakeLists.txt  input.yaml  seismogram_0_gold  seismogram_1_gold  seismogram_2_gold  snaps_sp_gold_2.txt  snaps_vp_2_gold  test.cmake
tests/multiPeriodsForcingRank2/: CMakeLists.txt  input.yaml  seismogram_0_gold  snaps_sp_gold_0.txt  test.cmake
tests/parser/: CMakeLists.txt  input1.yaml  input2.yaml  input3.yaml  input4.yaml  input5.yaml  input6.yaml  main1.cc  main2.cc  main3.cc  main4.cc  main5.cc  main6.cc
tests/seismogram/: CMakeLists.txt  input.yaml  main.cc
tests/stress_labels/: CMakeLists.txt  main.cc
tests/torevive/fomMultiForcing/: CMakeLists.txt
tests/torevive/romTest1/: testwrapper.cmake
tests/torevive/romTest2/: input_rom_bin.txt  snaps_vp_gold.txt
(+511 files in other folders)
